--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,6 +19,12 @@
 			<version>${revision}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.tinqinacademy</groupId>
+			<artifactId>persistence</artifactId>
+			<version>${revision}</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 
