--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 			<version>3.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 
 <!--	<build>-->
