--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=hotel
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
 spring.datasource.username=admin
 spring.datasource.password=adminadmin
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
