--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=hotel
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
 spring.datasource.username=admin
 spring.datasource.password=adminadmin
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
