--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - 'POSTGRES_USER=admin'
     ports:
       - '5432:5432'
+    restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
