--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=hotel
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
 spring.datasource.username=admin
 spring.datasource.password=adminadmin
-
+server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
