--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.tinqinacademy</groupId>
+		<groupId>com.tinqinacademy.hotel</groupId>
 		<artifactId>hotel</artifactId>
 		<version>${revision}</version>
 
@@ -14,13 +14,13 @@
 	<description>Hotel Project </description>
 	<dependencies>
 		<dependency>
-			<groupId>com.tinqinacademy</groupId>
+			<groupId>com.tinqinacademy.hotel</groupId>
 			<artifactId>api</artifactId>
 			<version>${revision}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.tinqinacademy</groupId>
+			<groupId>com.tinqinacademy.hotel</groupId>
 			<artifactId>core</artifactId>
 			<version>${revision}</version>
 			<scope>compile</scope>
