--- a/restexport/pom.xml
+++ b/restexport/pom.xml
@@ -8,10 +8,18 @@
 		<version>${revision}</version>
 
 	</parent>
-	<artifactId>api</artifactId>
+	<artifactId>restexport</artifactId>
 	<version>${revision}</version>
-	<name>hotel-api</name>
+	<name>hotel-restexport</name>
 	<description>Hotel Project </description>
+	<dependencies>
+		<dependency>
+			<groupId>com.tinqinacademy.hotel</groupId>
+			<artifactId>core</artifactId>
+			<version>${revision}</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 
 
 </project>
