--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=hotel
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
 spring.datasource.username=admin
-spring.datasource.password=adminadmin
+spring.datasource.password=admin
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.generate-ddl=true
