--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hotel
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotel_db
 spring.datasource.username=admin
 spring.datasource.password=admin
 server.port=8080
