--- a/restexport/pom.xml
+++ b/restexport/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.tinqinacademy.hotel</groupId>
 		<artifactId>hotel</artifactId>
-		<version>${revision}</version>
+		<version>0.0.1-SNAPSHOT</version>
 
 	</parent>
 	<artifactId>restexport</artifactId>
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>com.tinqinacademy.hotel</groupId>
 			<artifactId>core</artifactId>
-			<version>${revision}</version>
+			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
