--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,24 +3,23 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.tinqinacademy</groupId>
+		<groupId>com.tinqinacademy.hotel</groupId>
 		<artifactId>hotel</artifactId>
 		<version>${revision}</version>
 
 	</parent>
 	<artifactId>core</artifactId>
-	<version>${revision}</version>
 	<name>hotel-core</name>
 	<description>Hotel Project </description>
 	<dependencies>
 		<dependency>
-			<groupId>com.tinqinacademy</groupId>
+			<groupId>com.tinqinacademy.hotel</groupId>
 			<artifactId>api</artifactId>
 			<version>${revision}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.tinqinacademy</groupId>
+			<groupId>com.tinqinacademy.hotel</groupId>
 			<artifactId>persistence</artifactId>
 			<version>${revision}</version>
 			<scope>compile</scope>
