--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -3,13 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.tinqinacademy</groupId>
+        <groupId>com.tinqinacademy.hotel</groupId>
         <artifactId>hotel</artifactId>
         <version>${revision}</version>
     </parent>
 
     <artifactId>persistence</artifactId>
-    <version>${revision}</version>
     <name>hotel-persistence</name>
     <description>Hotel Project </description>
 
