--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -3,29 +3,44 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.tinqinacademy</groupId>
+		<groupId>com.tinqinacademy.hotel</groupId>
 		<artifactId>hotel</artifactId>
 		<version>${revision}</version>
 
 	</parent>
 	<artifactId>rest</artifactId>
-	<version>${revision}</version>
 	<name>hotel-rest</name>
 	<description>Hotel Project </description>
 	<dependencies>
 		<dependency>
-			<groupId>com.tinqinacademy</groupId>
+			<groupId>com.tinqinacademy.hotel</groupId>
 			<artifactId>api</artifactId>
 			<version>${revision}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.tinqinacademy</groupId>
+			<groupId>com.tinqinacademy.hotel</groupId>
 			<artifactId>core</artifactId>
 			<version>${revision}</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.tinqinacademy.hotel.rest.HotelApplication</mainClass>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
