--- a/restexport/pom.xml
+++ b/restexport/pom.xml
@@ -5,12 +5,20 @@
 	<parent>
 		<groupId>com.tinqinacademy.hotel</groupId>
 		<artifactId>hotel</artifactId>
-		<version>${revision}</version>
+		<version>0.0.1-SNAPSHOT</version>
 
 	</parent>
-	<artifactId>api</artifactId>
-	<name>hotel-api</name>
+	<artifactId>restexport</artifactId>
+	<name>hotel-restexport</name>
 	<description>Hotel Project </description>
+	<dependencies>
+		<dependency>
+			<groupId>com.tinqinacademy.hotel</groupId>
+			<artifactId>core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 
 
 </project>
